--- a/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
+++ b/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
@@ -6,7 +6,11 @@
     "id": "w5OPn4z3pCrK"
    },
    "source": [
-    "**Student's name**"
+    "**Student's name**\n",
+    "\n",
+    "Mathieu Ruch\n",
+    "\n",
+    "An Bui Duc Khanh"
    ]
   },
   {
@@ -186,7 +190,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER**"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "According to openCV documentation, the best matching position is located in a local minimum for methods using TM_SQDIFF and in a local maximum for methods using TM_CCORR or TM_CCOEFF. So we have that:\n",
+    "\n",
+    "The best matching position is located in a minimum for:\n",
+    "- Mean Squared Difference Method\n",
+    "- Normalized Mean Squared Difference Method\n",
+    "\n",
+    "The best matching position is located in a maximum for:\n",
+    "- Cross Correlation Method\n",
+    "- Normalized Cross Correlation method\n",
+    "- Correlation Coefficient Method\n",
+    "- Normalized Correlation Coefficient"
    ]
   },
   {
@@ -224,21 +240,36 @@
     "\n",
     "def sqdiff(image_patch, template): \n",
     "    res = 0 \n",
+    "    results = np.zeros_like(image_patch)\n",
+    "    \n",
+    "    for x in range(image_patch.shape[0]):\n",
+    "        for y in range(image_patch.shape[1]):\n",
+    "            for x_p in range(template.shape[0]):\n",
+    "                for y_p in range(template.shape[1]):\n",
+    "                    res += (template[x_p, y_p]-image_patch[x+x_p, y+y_p])**2\n",
+    "            results[x, y]\n",
+    "                    \n",
+    "    #dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
     "    return res\n",
     "def ccorr(image_patch, template):\n",
     "    res = 0 \n",
+    "    dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
     "    return res\n",
     "def ccorr_normed(image_patch, template):\n",
     "    res = 0 \n",
+    "    dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
     "    return res\n",
     "def ccoeff(image_patch, template):\n",
     "    res = 0 \n",
+    "    dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
     "    return res\n",
     "def ccoeff_normed(image_patch, template):\n",
     "    res = 0 \n",
+    "    dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
     "    return res\n",
     "def sqdiff_normed(image_patch, template):\n",
     "    res = 0 \n",
+    "    dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
     "    return res    \n",
     "######################"
    ]
@@ -275,8 +306,38 @@
     "    dist_map = None \n",
     "    \n",
     "    # YOUR CODE HERE \n",
+    "    if dist_fn == sqdiff:\n",
+    "        sqdiff(image, template)\n",
+    "    elif dist_fn == ccorr:\n",
+    "        ccorr(image, template)\n",
+    "    elif dist_fn == ccorr_normed:\n",
+    "        ccorr_normed(image, template)\n",
+    "    elif dist_fn == ccoeff:\n",
+    "        ccoeff(image_patch, template)\n",
+    "    elif dist_fn == ccoeff_normed:\n",
+    "        ccoeff_normed(image, template)\n",
+    "    elif dist_fn == sqdiff_normed:\n",
+    "        sqdiff_normed(image, template)\n",
+    "    else:\n",
+    "        raise NameError('This function does not exist for this implementation.')\n",
     "    \n",
     "    return dist_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Test cell\n",
+    "\"\"\"\n",
+    "img_gray = cv.imread(os.path.join(os.getcwd(), 'data', 'space-invaders_1.jpg'))\n",
+    "template = cv.imread(os.path.join(os.getcwd(), 'data', 'template_0.png'), 0)\"\"\"\n",
+    "img_gray = cv.imread('../data/space-invaders_1.jpg', 0)\n",
+    "template = cv.imread('../data/template_0.png', 0)\n",
+    "print(display_image(img_gray))\n",
+    "template_matching_process(img_gray, template, sqdiff)"
    ]
   },
   {
@@ -397,7 +458,17 @@
    "outputs": [],
    "source": [
     "# sqdiff()\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "res = cv.matchTemplate(img_gray, template, cv.TM_SQDIFF)\n",
+    "dist_map = template_matching_process(img_gray, template, sqdiff)\n",
+    "\n",
+    "# Display two example maps\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
+    "display_image(dist_map, axes=ax[0][0])\n",
+    "ax[0][0].set_title(\"My Distance Map\")\n",
+    "display_image(res, axes=ax[0][1])\n",
+    "ax[0][1].set_title(\"OpenCv Distance Map\")"
    ]
   },
   {
@@ -407,7 +478,17 @@
    "outputs": [],
    "source": [
     "#sqdiff_normed()\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "res = cv.matchTemplate(img_gray, template, cv.TM_SQDIFF_NORMED)\n",
+    "dist_map = template_matching_process(img_gray, template, sqdiff_normed)\n",
+    "\n",
+    "# Display two example maps\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
+    "display_image(dist_map, axes=ax[0][0])\n",
+    "ax[0][0].set_title(\"My Distance Map\")\n",
+    "display_image(res, axes=ax[0][1])\n",
+    "ax[0][1].set_title(\"OpenCv Distance Map\")"
    ]
   },
   {
@@ -417,7 +498,17 @@
    "outputs": [],
    "source": [
     "#ccorr()\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "res = cv.matchTemplate(img_gray, template, cv.TM_CCORR)\n",
+    "dist_map = template_matching_process(img_gray, template, ccorr)\n",
+    "\n",
+    "# Display two example maps\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
+    "display_image(dist_map, axes=ax[0][0])\n",
+    "ax[0][0].set_title(\"My Distance Map\")\n",
+    "display_image(res, axes=ax[0][1])\n",
+    "ax[0][1].set_title(\"OpenCv Distance Map\")"
    ]
   },
   {
@@ -427,7 +518,17 @@
    "outputs": [],
    "source": [
     "#ccorr_normed()\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "res = cv.matchTemplate(img_gray, template, cv.TM_CCORR_NORMED)\n",
+    "dist_map = template_matching_process(img_gray, template, ccorr_normed)\n",
+    "\n",
+    "# Display two example maps\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
+    "display_image(dist_map, axes=ax[0][0])\n",
+    "ax[0][0].set_title(\"My Distance Map\")\n",
+    "display_image(res, axes=ax[0][1])\n",
+    "ax[0][1].set_title(\"OpenCv Distance Map\")"
    ]
   },
   {
@@ -437,7 +538,17 @@
    "outputs": [],
    "source": [
     "#ccoeff()\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "res = cv.matchTemplate(img_gray, template, cv.TM_CCOEFF)\n",
+    "dist_map = template_matching_process(img_gray, template, ccoeff)\n",
+    "\n",
+    "# Display two example maps\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
+    "display_image(dist_map, axes=ax[0][0])\n",
+    "ax[0][0].set_title(\"My Distance Map\")\n",
+    "display_image(res, axes=ax[0][1])\n",
+    "ax[0][1].set_title(\"OpenCv Distance Map\")"
    ]
   },
   {
@@ -447,7 +558,17 @@
    "outputs": [],
    "source": [
     "#ccoeff_normed()\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "res = cv.matchTemplate(img_gray, template, cv.TM_CCOEFF_NORMED)\n",
+    "dist_map = template_matching_process(img_gray, template, ccorr_normed)\n",
+    "\n",
+    "# Display two example maps\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
+    "display_image(dist_map, axes=ax[0][0])\n",
+    "ax[0][0].set_title(\"My Distance Map\")\n",
+    "display_image(res, axes=ax[0][1])\n",
+    "ax[0][1].set_title(\"OpenCv Distance Map\")"
    ]
   },
   {
@@ -459,6 +580,13 @@
     "**QUESTION** (/2)\n",
     "\n",
     "Comment the differences between the OpenCV function and yours (speed, precision, etc)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It should be faster with openCV uses C++ for execution and our method uses for loops of python."
    ]
   },
   {
@@ -2395,7 +2523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
