--- a/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
+++ b/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
@@ -70,15 +70,15 @@
     "import os\n",
     "import math\n",
     "import tarfile\n",
-    "#from utils import *\n",
+    "from utils import *\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.svm import LinearSVC\n",
     "import imageio\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#%matplotlib inline"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -1173,7 +1173,7 @@
     "        resized = cv.resize(image, hog_size, interpolation = cv2.INTER_AREA)\n",
     "        ### Transfom to grayscale\n",
     "        image = cv2.cvtColor(resized, cv2.COLOR_BGR2GRAY)\n",
-    "        HOGs = descriptor.compute(resized)\n",
+    "        HOGs = descriptor.compute(image)\n",
     "        features.append(HOGs)\n",
     "        labels.append(label) \n",
     "    \n",
@@ -1300,7 +1300,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Justify parameters"
+    "### Justify parameters\n",
+    "\n",
+    "Reflechir entre C = 1 et C = 0.01\n",
+    "Maybe C = 1 because default parameter and 10'000 iterations to let it converge"
    ]
   },
   {
@@ -1350,7 +1353,7 @@
     "\n",
     "prediction_neg = model.predict(test_features_n)\n",
     "tn = accuracy_score(prediction_neg, test_labels_n)          \n",
-    "print(\"True negative estimation:\", tn)\n",
+    "print(\"Success rate negative samples:\", tn)\n",
     "\n",
     "print (\"Estimating the test data [Positive samples]\")\n",
     "# Extract features\n",
@@ -1366,7 +1369,7 @@
     "\n",
     "prediction_pos = model.predict(test_features_p)\n",
     "tp = accuracy_score(prediction_pos, test_labels_p) \n",
-    "print(\"True positive estimation:\", tp)\n",
+    "print(\"Success rate positive samples:\", tp)\n",
     "\n",
     "### F1 score\n",
     "fn = 1-tn\n",
@@ -1412,52 +1415,49 @@
     "block_size   = (16,16)\n",
     "block_stride = (8,8)\n",
     "cell_size = (4,4)\n",
-    "nbins = 16\n",
-    "hog = cv2.HOGDescriptor(win_size, block_size, block_stride, cell_size, nbins)\n",
+    "nbins = 16  ### Take larger number of bins\n",
+    "new_hog = cv2.HOGDescriptor(win_size, block_size, block_stride, cell_size, nbins)\n",
     "\n",
     "### Train feature extraction\n",
     "training_features = []\n",
     "labels = []\n",
     "print (\"Calculating the descriptors for the positive samples and saving them\")\n",
-    "pos_feat, pos_label = _extract_feature(path_img_pos, descriptor=hog, label=1, hog_size=win_size)   \n",
+    "pos_feat, pos_label = _extract_feature(path_img_pos, descriptor=new_hog, label=1, hog_size=win_size)   \n",
     "training_features.extend(pos_feat)\n",
     "labels.extend(pos_label)\n",
     "\n",
     "#Negative features\n",
     "print (\"Calculating the descriptors for the negative samples and saving them\")\n",
-    "neg_feat, neg_label = _extract_feature(path_img_neg, descriptor=hog, label=0, hog_size=win_size)   \n",
+    "neg_feat, neg_label = _extract_feature(path_img_neg, descriptor=new_hog, label=0, hog_size=win_size)   \n",
     "training_features.extend(neg_feat)\n",
     "labels.extend(neg_label)\n",
     "\n",
-    "model = LinearSVC(loss='hinge',max_iter=10000,C=0.01)\n",
+    "new_model = LinearSVC(loss='hinge',max_iter=10000,C=0.01)\n",
     "print (\"Training a Linear SVM Classifier\")\n",
-    "model.fit(training_features, labels)\n",
+    "new_model.fit(training_features, labels)\n",
     "\n",
     "### Test features extraction\n",
     "\n",
     "path_img_neg = return_img_path(test_neg_path, folder='../data/INRIAPerson')   \n",
-    "test_neg_feat, label_neg_test = _extract_feature(path_img_neg, hog, label=0, hog_size=win_size)\n",
+    "test_neg_feat, label_neg_test = _extract_feature(path_img_neg, new_hog, label=0, hog_size=win_size)\n",
     "\n",
     "test_features_n = np.asarray(test_neg_feat)\n",
     "test_labels_n = np.asarray(label_neg_test)\n",
     "\n",
-    "prediction_neg = model.predict(test_features_n)\n",
-    "tn = accuracy_score(prediction_neg, test_labels_n) \n",
-    "\n",
     "print (\"Estimating the test data [Negative samples]\")\n",
-    "prediction_neg = model.predict(test_features_n)\n",
+    "prediction_neg = new_model.predict(test_features_n)\n",
     "tn = accuracy_score(prediction_neg, test_labels_n)          \n",
-    "print(tn)\n",
+    "print(\"Success rate negative samples:\", tn)\n",
     "\n",
     "print (\"Estimating the test data [Positive samples]\")                               \n",
-    "test_pos_feat, label_pos_test = _extract_feature(path_img_pos, hog, label=1, hog_size=win_size)\n",
+    "test_pos_feat, label_pos_test = _extract_feature(path_img_pos, new_hog, label=1, hog_size=win_size)\n",
     "                               \n",
     "test_features_p = np.asarray(test_pos_feat)\n",
     "test_labels_p = np.asarray(label_pos_test)\n",
     "\n",
-    "prediction_pos = model.predict(test_features_p)\n",
+    "prediction_pos = new_model.predict(test_features_p)\n",
     "tp = accuracy_score(prediction_pos, test_labels_p) \n",
-    "print(tp)\n",
+    "print(\"Success rate positive samples:\", tp)\n",
     "\n",
     "### F1 score\n",
     "fn = 1-tn\n",
@@ -1560,7 +1560,7 @@
     "        if i < 10:\n",
     "            path = os.path.join('..', 'data', 'yaleB', 'yaleB0'+str(i))\n",
     "            data[i] = path\n",
-    "        elif i==14:\n",
+    "        elif i==14: ### 14 is not present in the folders\n",
     "            pass\n",
     "        else:\n",
     "            path = os.path.join('..', 'data', 'yaleB', 'yaleB'+str(i))\n",
@@ -1662,7 +1662,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "yi4Jxc40pCsF"
+    "id": "yi4Jxc40pCsF",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1692,20 +1693,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install pgm-reader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "KLSP_DeCpCsG"
    },
    "outputs": [],
    "source": [
+    "from sklearn import preprocessing as pre\n",
+    "\n",
     "def load_images(subset):\n",
     "    \"\"\"\n",
     "    Load images into one single matrix where each row is one single image (flattened). The final dimensions is [N x K]\n",
@@ -1724,7 +1718,7 @@
     "    # YOUR CODE HERE\n",
     "    label = []\n",
     "    data = []\n",
-    "    for i in range(1, len(subset)+1):\n",
+    "    for i in range(1, len(subset)+2):\n",
     "        \n",
     "        ### No folder yaleB14\n",
     "        if i != 14:\n",
@@ -1732,10 +1726,12 @@
     "                \n",
     "                ### Ensure take a .pgm file\n",
     "                if file.endswith(\".pgm\"):\n",
-    "                    image = cv.imread(file)\n",
+    "                    image = cv2.cvtColor(cv.imread(file), cv2.COLOR_BGR2GRAY).astype(np.float32)\n",
     "                    dim = image.shape\n",
-    "                    new_im = cv2.resize(image, (int(dim[0]/2), int(dim[1]/2)))\n",
-    "                    data.append(new_im.flatten())\n",
+    "                    new_im = cv2.resize(image, (int(dim[1]/2), int(dim[0]/2)))\n",
+    "                    x = new_im.flatten()\n",
+    "                    x_norm = (x-np.min(x))/(np.max(x)-np.min(x))\n",
+    "                    data.append(x_norm)\n",
     "                    label.append(i)\n",
     "                    \n",
     "    data, label = np.array(data), np.array(label)    \n",
@@ -1835,31 +1831,31 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "\n",
+    "train_centered = train_img-train_img.mean(axis=0)\n",
+    "#plot_gallery(\"Faces from dataset\", train_centered[:6])\n",
     "pca = PCA()\n",
-    "pca.fit(train_img)\n",
+    "pca.fit(train_centered)\n",
+    "#pca_estimator = PCA(n_components=8, svd_solver=\"randomized\", whiten=True)\n",
+    "#pca_estimator.fit(train_centered)\n",
     "\n",
     "m, summ = 0, 0\n",
-    "tot_var = np.sum(pca.explained_variance_ratio_)\n",
-    "print(tot_var)\n",
     "\n",
     "for i, var in enumerate(pca.explained_variance_ratio_):\n",
     "    summ += var\n",
-    "    if summ/tot_var>0.95:\n",
+    "    if summ>0.95:\n",
     "        m = i\n",
     "        break\n",
     "        \n",
-    "print(m)\n",
+    "print(\"The total number of components to retain 95% of the variance of the data is:\", m)\n",
     "eigenfaces = pca.components_[:m]    \n",
     "\n",
-    "plt.figure()\n",
-    "plt.subplot(2,4,1)\n",
-    "plt.imshow(yalefaces.mean(1).reshape((48, 42)), cmap='gray')\n",
-    "plt.axis('off')\n",
+    "dim = cv.imread(train[1][0]).shape[:2]\n",
+    "\n",
     "\n",
     "for i in range(8):\n",
-    "    plt.subplot(2,4,i+2)\n",
-    "    plt.imshow(pc[i,:].reshape((48, 42)), cmap='gray') ### Eigenfaces instead of pc I think\n",
+    "    plt.subplot(2,4,i+1)\n",
+    "    plt.title(\"EigenFace #\"+str(i))\n",
+    "    plt.imshow(eigenfaces[i, :].reshape(int(dim[0]/2), int(dim[1]/2)), cmap='gray') ### Eigenfaces instead of pc I think\n",
     "    plt.axis('off')\n",
     "plt.show()"
    ]
@@ -1872,11 +1868,11 @@
    "source": [
     "### PCA from scratch \n",
     "\n",
-    "X = train_img.transpose()\n",
+    "X = train_img\n",
     "mean = np.matmul(np.ones(X.shape[0]).reshape(X.shape[0],1),X.mean(0).reshape(1,X.shape[1]))\n",
     "X = X - mean\n",
     "\n",
-    "S = np.matmul(X.transpose(),X)*(1/X.shape[0])\n",
+    "S = np.matmul(X, X.transpose())*(1/X.shape[0])\n",
     "w, v = np.linalg.eig(S)\n",
     "\n",
     "total_var = np.cumsum(w)/w.sum()\n",
@@ -1908,7 +1904,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER**"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "Elcairage gauche droite  dessuss...\n",
+    "Same result between both methods"
    ]
   },
   {
@@ -2005,10 +2004,14 @@
     "    unique_lbl = None\n",
     "\n",
     "    # YOUR CODE HERE\n",
+    "    data_centered = data-data.mean(axis=0)\n",
     "    U = trsfrm.transform(data).T\n",
-    "    centroids = np.mean(U@proj_train, axis=1)\n",
-    "        \n",
-    "    unique_lbl = label\n",
+    "    print(U.shape, train_centered.shape)\n",
+    "    centroids = np.array(np.split(U@data_centered, 38, axis=0))\n",
+    "    print(centroids.shape)\n",
+    "    centroids = np.mean(centroids, axis=1)\n",
+    "    \n",
+    "    unique_lbl = np.unique(label)\n",
     "    \n",
     "    return centroids, unique_lbl"
    ]
@@ -2040,7 +2043,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We should have 38 centroids since this is the number of samples for each subject."
+    "We should have 38 centroids since this is the number of subjects."
    ]
   },
   {
@@ -2078,6 +2081,8 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "\n",
     "def recognize(trsfrm, centroids, centroids_label, samples):\n",
     "    \"\"\"\n",
     "    Perform object recognition on a given list of ``amples\n",
@@ -2092,14 +2097,33 @@
     "    pred = None \n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    X = samples.transpose()\n",
+    "    data_centered = samples-samples.mean(axis=0)\n",
+    "    U = trsfrm.transform(samples).T\n",
+    "    #omega_n = np.array(np.split(U@train_centered, 38, axis=0))\n",
+    "    \n",
+    "    X = samples\n",
+    "    #X = X-X.mean(axis=0)\n",
     "    mean = np.matmul(np.ones(X.shape[0]).reshape(X.shape[0],1),X.mean(0).reshape(1,X.shape[1]))\n",
     "    X = X - mean\n",
     "\n",
     "    omegas = U@X\n",
-    "    i = argmin np.distance(col omega, centroid)\n",
-    "    pred = label[i]\n",
-    "    \n",
+    "    pred = []\n",
+    "    print(omegas.shape, X.shape)\n",
+    "\n",
+    "    for om in omegas:\n",
+    "        dist = []\n",
+    "        for c in centroids:\n",
+    "            dist.append(np.linalg.norm(om-c))\n",
+    "        i = np.argmin(np.array(dist))\n",
+    "        \"\"\"\n",
+    "        #dist = euclidean_distances(centroids.T, (om.reshape(-1, 1)@np.ones((1, centroids.shape[1]))))\n",
+    "        dist = euclidean_distances(centroids, om.reshape(-1, 1).T)\n",
+    "        print(dist)\n",
+    "        print(dist.shape, centroids.shape, om.reshape(-1, 1).T.shape)\n",
+    "        i = np.argmin(dist, axis=1)\n",
+    "        \"\"\"\n",
+    "        pred.append(centroids_label[i])\n",
+    "\n",
     "    return pred"
    ]
   },
@@ -2152,8 +2176,10 @@
     "\n",
     "# YOUR CODE HERE\n",
     "test_img, test_label = load_images(test)\n",
-    "test_centroids, test_centroid_label = compute_centroids(test_img, pca, test_label)\n",
-    "pca_test_pred = recognize(pca, test_centroids, test_centroid_label, test_img)\n",
+    "test_centered = test_img-test_img.mean(axis=0)\n",
+    "pca = PCA()\n",
+    "pca.fit(test_centered)\n",
+    "pca_test_pred = recognize(pca, train_centroids, train_centroid_label, test_img)\n",
     "n_err = np.count_nonzero(np.where(pca_test_pred != test_label))\n",
     "test_acc = 1.0 - n_err / test_label.size\n",
     "\n",
@@ -2194,7 +2220,8 @@
     "# YOUR CODE HERE\n",
     "#########################\n",
     "\n",
-    "cm = confusion_matrix()\n",
+    "cm = confusion_matrix(pca_test_pred, test_label)\n",
+    "pca_test_pred\n",
     "\n",
     "# Plot confusion matrix\n",
     "plt.figure(figsize=(12, 7))\n",
@@ -2401,9 +2428,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "IPLAB",
+   "display_name": "Exam",
    "language": "python",
-   "name": "iplab"
+   "name": "exam"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2415,7 +2442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
