add comment on rescaling images from 01 to 0255

--- a/lab1/01_introduction_image_processing_2023.ipynb
+++ b/lab1/01_introduction_image_processing_2023.ipynb
@@ -1576,6 +1576,7 @@
     "    \n",
     "    # YOUR CODE HERE\n",
     "    img_flt = apply_highpass_filter(img,highpass_params)\n",
+    "    #rescale the image to 0-255\n",
     "    img_flt = np.abs(img_flt).astype(np.uint8)\n",
     "    img_edges = threshold_image(img_flt,thresh_params)\n",
     "    \n",
