--- a/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
+++ b/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
@@ -63,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install scikit-learn imageio\n",
+    "# !pip install scikit-learn imageio\n",
     "\n",
     "import cv2 as cv\n",
     "import numpy as np\n",
@@ -205,9 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "E7TwLylFpCrm"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def my_distance_fn(image_patch, template):\n",
@@ -221,41 +219,83 @@
     "    return  dummy_distance\n",
     "\n",
     "\n",
-    "#######################\n",
-    "# YOUR CODE HERE\n",
     "\n",
-    "def sqdiff(image_patch, template): \n",
-    "    res = 0 \n",
-    "    res = np.sum(template.astype(np.float32)-image_patch.astype(np.float32))**2\n",
-    "    #dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
-    "    return res\n",
-    "def ccorr(image_patch, template):\n",
-    "    res = 0 \n",
-    "    res = np.sum(image_patch.astype(np.float32)*template.astype(np.float32))\n",
-    "    return res\n",
-    "def ccorr_normed(image_patch, template):\n",
-    "    res = 0 \n",
-    "    res = ccorr(image_patch, template)/np.sqrt(np.sum(image_patch.astype(np.float32))**2*np.sum(template.astype(np.float32))**2)\n",
-    "    #dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
-    "    return res\n",
-    "def ccoeff(image_patch, template):\n",
-    "    res = 0 \n",
-    "    h, w = template.shape\n",
-    "    T_p = np.sum(template.astype(np.float32), -1/(w*h)*np.sum(template.astype(np.float32)))\n",
-    "    I_p = np.sum(image_patch.astype(np.float32), -1/(w*h)*np.sum(image_patch.astype(np.float32)))\n",
-    "    res = ccorr(T_p, I_P)\n",
-    "    #dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
-    "    return res\n",
-    "def ccoeff_normed(image_patch, template):\n",
-    "    res = 0 \n",
-    "    \n",
-    "    #dummy_distance = np.sum(image_patch.astype(np.float32) - template.astype(np.float32))\n",
-    "    return res\n",
+    "# YOUR CODE HERE\n",
+    "def sqdiff(image_patch, template):\n",
+    "    \"\"\"\n",
+    "    Calculate the Sum of Squared Differences (SSD) between image_patch and template\n",
+    "    :image_patch:       Input region of interest of the image.\n",
+    "    :template:          The Template Image.\n",
+    "    :return:            The distance between image_patch and template.\n",
+    "    \"\"\"\n",
+    "    diff = image_patch.astype(np.float32) - template.astype(np.float32)\n",
+    "    ssd = np.sum(np.square(diff))\n",
+    "    return ssd\n",
+    "\n",
     "def sqdiff_normed(image_patch, template):\n",
-    "    res = 0 \n",
-    "    res = sqdiff(image_patch, template)/np.sqrt(np.sum(image_patch.astype(np.float32))**2*np.sum(template.astype(np.float32))**2)\n",
-    "    return res    \n",
-    "######################"
+    "    \"\"\"\n",
+    "    Calculate the Normalized Sum of Squared Differences (NSSD) between image_patch and template\n",
+    "    :image_patch:       Input region of interest of the image.\n",
+    "    :template:          The Template Image.\n",
+    "    :return:            The distance between image_patch and template.\n",
+    "    \"\"\"\n",
+    "    diff = image_patch.astype(np.float32) - template.astype(np.float32)\n",
+    "    numerator = np.sum(np.square(diff))\n",
+    "    \n",
+    "    denominator = np.sqrt(np.sum(image_patch.astype(np.float32)**2) * np.sum(template.astype(np.float32)**2))\n",
+    "    sqdiff_normed = numerator / denominator if denominator != 0 else np.inf\n",
+    "    return sqdiff_normed\n",
+    "    \n",
+    "\n",
+    "\n",
+    "def ccorr(image_patch, template):\n",
+    "    \"\"\"\n",
+    "    Calculate the cross-correlation distance between image_patch and template\n",
+    "    :image_patch:       Input region of interest of the image.\n",
+    "    :template:          The Template Image.\n",
+    "    :return:            The cross-correlation distance.\n",
+    "    \"\"\"\n",
+    "    # Compute cross-correlation distance\n",
+    "    ccorr = np.sum(image_patch.astype(np.float32) * template.astype(np.float32))\n",
+    "    return ccorr\n",
+    "\n",
+    "\n",
+    "def ccorr_normed(image_patch, template):\n",
+    "    \"\"\"\n",
+    "    Calculate the normalized cross-correlation distance between image_patch and template\n",
+    "    :image_patch:       Input region of interest of the image.\n",
+    "    :template:          The Template Image.\n",
+    "    :return:            The normalized cross-correlation distance.\n",
+    "    \"\"\"\n",
+    "    # Compute numerator and denominator of normalized cross-correlation distance\n",
+    "    numerator = np.sum(image_patch.astype(np.float32) * template.astype(np.float32))\n",
+    "    denominator = np.sqrt(np.sum(image_patch.astype(np.float32)**2) * np.sum(template.astype(np.float32)**2))\n",
+    "    \n",
+    "    # Compute normalized cross-correlation distance\n",
+    "    ccorr_normed = numerator / denominator if denominator != 0 else 0\n",
+    "    return ccorr_normed\n",
+    "\n",
+    "\n",
+    "def ccoeff(image_patch, template):\n",
+    "    \"\"\"\n",
+    "    Calculates the cross-correlation between image_patch and template.\n",
+    "    \"\"\"\n",
+    "    sum_T = np.sum(template)\n",
+    "    sum_I = np.sum(image_patch)\n",
+    "    corr = np.sum((image_patch - (sum_I / image_patch.size)) * (template - (sum_T / template.size)))\n",
+    "    return corr\n",
+    "\n",
+    "def ccoeff_normed(image_patch, template):\n",
+    "    \"\"\"\n",
+    "    Calculates the normalized cross-correlation between image_patch and template.\n",
+    "    \"\"\"\n",
+    "    sum_T = np.sum(template)\n",
+    "    sum_I = np.sum(image_patch)\n",
+    "    numerator = np.sum((image_patch - (sum_I / image_patch.size)) * (template - (sum_T / template.size)))\n",
+    "    denominator = np.sqrt(np.sum(np.square(image_patch - (sum_I / image_patch.size))) * np.sum(np.square(template - (sum_T / template.size))))\n",
+    "    ccoeff_normed = numerator / denominator if denominator != 0 else 0\n",
+    "    return ccoeff_normed\n",
+    "   \n"
    ]
   },
   {
@@ -282,20 +322,26 @@
     "\n",
     "    :input_image:       Input image. :) \n",
     "    :template:          The Template Image.\n",
-    "    :distance_function  Function used to compute the distance. The function should receive a image patch \n",
+    "    :distance_function: Function used to compute the distance. The function should receive a image patch \n",
     "                        and a template as inputs.\n",
     "    :return:            The distance map.\n",
     "    \"\"\"\n",
+    "    height, width = image.shape[:2]\n",
+    "    t_height, t_width = template.shape[:2]\n",
+    "    dist_map = np.zeros((height - t_height + 1, width - t_width + 1), dtype=np.float32)\n",
     "    \n",
-    "    dist_map = None \n",
-    "    \n",
-    "    # YOUR CODE HERE \n",
-    "    dist_map = np.zeros_like(image, dtype=np.float32)\n",
-    "    \n",
-    "    for x in range(image.shape[0]-template.shape[0]):\n",
-    "        for y in range(image.shape[1]-template.shape[1]):\n",
-    "            dist_map[x, y] = dist_fn(image[x:x+template.shape[0], y:y+template.shape[1]], template)\n",
+    "    for y in range(height - t_height + 1):\n",
+    "        for x in range(width - t_width + 1):\n",
+    "            image_patch = image[y:y+t_height, x:x+t_width]\n",
+    "            dist_map[y, x] = dist_fn(image_patch, template)\n",
     "            \n",
+    "\n",
+    "            \n",
+    "    if dist_fn.__name__ == 'sqdiff_normed':\n",
+    "\n",
+    "        dist_map[dist_map > 1] = 1\n",
+    "\n",
+    "\n",
     "    \n",
     "    return dist_map"
    ]
@@ -312,7 +358,7 @@
     "\n",
     "# calculate distance\n",
     "dist_map = template_matching_process(img_gray, template, sqdiff)\n",
-    "\"\"\"\n",
+    "\n",
     "# display\n",
     "plt.figure(figsize=(12.8, 8.2))\n",
     "plt.subplot(131)\n",
@@ -330,7 +376,7 @@
     "plt.axis('off')\n",
     "plt.title('Distance Map')\n",
     "\n",
-    "plt.show()\"\"\""
+    "plt.show()"
    ]
   },
   {
@@ -398,7 +444,6 @@
    "source": [
     "# Example\n",
     "res = cv.matchTemplate(img_gray, template, cv.TM_SQDIFF_NORMED)\n",
-    "\n",
     "# Display two example maps\n",
     "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
     "display_image(dist_map, axes=ax[0][0])\n",
@@ -420,7 +465,6 @@
     "\n",
     "res = cv.matchTemplate(img_gray, template, cv.TM_SQDIFF)\n",
     "dist_map = template_matching_process(img_gray, template, sqdiff)\n",
-    "\n",
     "# Display two example maps\n",
     "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
     "display_image(dist_map, axes=ax[0][0])\n",
@@ -519,7 +563,7 @@
     "# YOUR CODE HERE\n",
     "\n",
     "res = cv.matchTemplate(img_gray, template, cv.TM_CCOEFF_NORMED)\n",
-    "dist_map = template_matching_process(img_gray, template, ccorr_normed)\n",
+    "dist_map = template_matching_process(img_gray, template, ccoeff_normed)\n",
     "\n",
     "# Display two example maps\n",
     "fig, ax = plt.subplots(1, 2, figsize=(15, 7),squeeze=False)\n",
@@ -544,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It should be faster with openCV uses C++ for execution and our method uses for loops of python."
+    "The openCV implementation is more precise than the one we implemented. Manually checking the minimum values in the OpenCV map, we see that it holds values as small as 1e-7, while our minimums are rounded down to 0. Moreover, the OpenCV implementation is faster than ours due to the use of optimized libraries and matrix manipulation functions, while we use for loops to iterate over the image and template matrices."
    ]
   },
   {
@@ -584,17 +628,19 @@
     "    \n",
     "    #######################\n",
     "\n",
-    "    ## YOUR CODE HERE\n",
-    "    if flag == 'max':\n",
-    "        for i in range(params):\n",
-    "            ret = np.argmax()\n",
-    "    elif flag == 'min':\n",
-    "        for i in range(params):\n",
-    "            ret = np.argmin()\n",
+    "    if flag not in [\"min\", \"max\"]:\n",
+    "        return \"Invalid flag. Please choose 'min' or 'max'.\"\n",
+    "\n",
+    "    global_min, global_max, _, _ = cv.minMaxLoc(src)\n",
+    "    # print(global_min, global_max)\n",
+    "    if flag == \"min\":\n",
+    "        diff_img = abs(global_min - src)/abs(global_max-global_min)\n",
     "    else:\n",
-    "        raise NameError('No corresponding flag')\n",
-    "    #######################\n",
-    "    return ret"
+    "        diff_img = abs(src - global_max)/abs(global_max-global_min)\n",
+    "    # print(diff_img.shape)\n",
+    "    ret = np.where(diff_img <= params)\n",
+    "    return ret\n",
+    "    #######################\n"
    ]
   },
   {
@@ -618,9 +664,10 @@
     "    canvas = src.copy();\n",
     "    \n",
     "    # Draw all rectangles\n",
-    "    for pt in zip(*locations[::-1]):\n",
+    "    for pt in list(zip(*locations[::-1])):\n",
+    "        # print(pt)\n",
     "        cv.rectangle(canvas, pt, (pt[0] + w, pt[1] + h), color, 2)\n",
-    "    \n",
+    "       \n",
     "    return canvas\n",
     "\n",
     "# How should be called:\n",
@@ -629,15 +676,24 @@
     "template = cv.imread('../data/template_0.png',0)\n",
     "\n",
     "# For a given distance Map\n",
-    "distance_map_norm_corr = cv.matchTemplate(img_gray,template,cv.TM_CCORR_NORMED)\n",
+    "distance_map_norm_corr = cv.matchTemplate(img_gray,template,cv.TM_CCOEFF_NORMED)\n",
     "# Use your function here!\n",
-    "locations = multiMinMax(distance_map_norm_corr,'max',0.95)\n",
+    "locations = multiMinMax(distance_map_norm_corr,'max',6e-2)\n",
+    "# print(locations)\n",
     "# Draw the ROIs \n",
     "img_rgb_holder = drawROIS(img_rgb, template, locations)\n",
     "# example:\n",
-    "display_image(img_rgb_holder)\n",
-    "# How many ROIS did you returned? \n",
-    "print(np.array(locations).shape)"
+    "display_image(img_rgb_holder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = multiMinMax(distance_map_norm_corr,'max',1e-2)\n",
+    "locations"
    ]
   },
   {
@@ -719,7 +775,22 @@
    },
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE"
+    "## YOUR CODE HERE\n",
+    "# Perform template matching for both templates\n",
+    "dist_map_template_1 = cv.matchTemplate(p1_src_gray, p1_template_1, cv.TM_CCOEFF_NORMED)\n",
+    "dist_map_template_2 = cv.matchTemplate(p1_src_gray, p1_template_2, cv.TM_CCOEFF_NORMED)\n",
+    "\n",
+    "# Use multiMinMax function to get the locations of matching objects\n",
+    "locations_template_1 = multiMinMax(dist_map_template_1, 'max', 6e-2)\n",
+    "locations_template_2 = multiMinMax(dist_map_template_2, 'max', 6e-2)\n",
+    "\n",
+    "# Draw the ROIs on the RGB image for both templates\n",
+    "img_rgb_with_ROIs_template_1 = drawROIS(p1_src_rgb, p1_template_1, locations_template_1)\n",
+    "img_rgb_with_ROIs_template_2 = drawROIS(img_rgb_with_ROIs_template_1, p1_template_2, locations_template_2)\n",
+    "\n",
+    "# Display the image with detected objects\n",
+    "display_image(img_rgb_with_ROIs_template_2)\n",
+    "# print(len(locations_template_1[0]), len(locations_template_2))"
    ]
   },
   {
@@ -798,7 +869,21 @@
    },
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE"
+    "## YOUR CODE HERE\n",
+    "# Perform template matching for both templates\n",
+    "dist_map_template_1 = cv.matchTemplate(p2_src_gray, p2_template_1, cv.TM_CCOEFF_NORMED)\n",
+    "dist_map_template_2 = cv.matchTemplate(p2_src_gray, p2_template_2, cv.TM_CCOEFF_NORMED)\n",
+    "\n",
+    "# Use multiMinMax function to get the locations of matching objects\n",
+    "locations_template_1 = multiMinMax(dist_map_template_1, 'max', 2.5e-1)\n",
+    "locations_template_2 = multiMinMax(dist_map_template_2, 'max', 3e-1)\n",
+    "\n",
+    "# Draw the ROIs on the RGB image for both templates\n",
+    "img_rgb_with_ROIs_template_1 = drawROIS(p2_src_rgb, p2_template_1, locations_template_1)\n",
+    "img_rgb_with_ROIs_template_2 = drawROIS(img_rgb_with_ROIs_template_1, p2_template_2, locations_template_2)\n",
+    "\n",
+    "# Display the image with detected objects\n",
+    "display_image(img_rgb_with_ROIs_template_2)"
    ]
   },
   {
@@ -917,8 +1002,15 @@
     "def minMax(src, flag):\n",
     "    \n",
     "    #YOUR CODE HERE\n",
-    "\n",
-    "    return location"
+    "    if flag not in [\"min\", \"max\"]:\n",
+    "        return \"Invalid flag. Please choose 'min' or 'max'.\"\n",
+    "    \n",
+    "    global_min, global_max, min_loc, max_loc = cv.minMaxLoc(src)\n",
+    "    \n",
+    "    if flag == \"min\":\n",
+    "        return (global_min, [[min_loc[1]], [min_loc[0]]])\n",
+    "    else:\n",
+    "        return (global_max, [[max_loc[1]], [max_loc[0]]])"
    ]
   },
   {
@@ -927,7 +1019,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "#YOUR CODE HERE\n",
+    "\n",
+    "\n",
+    "def find_objects(hidden_gray, hidden_rgb, templates):\n",
+    "    found_objects = []\n",
+    "    for i, template in enumerate(templates):\n",
+    "        dist_map = cv.matchTemplate(hidden_gray, template, cv.TM_CCOEFF_NORMED)\n",
+    "        val, loc = minMax(dist_map, 'max')\n",
+    "        # max_loc = ([max_loc[1]], [max_loc[0]])\n",
+    "        \n",
+    "\n",
+    "        found_objects.append((i, loc))\n",
+    "        img_with_ROI = drawROIS(hidden_rgb, template, loc)\n",
+    "        print(\"Found template\", i+1, \"at\", loc[::-1], \"with value\", val)\n",
+    "        hidden_rgb = img_with_ROI.copy()\n",
+    "    \n",
+    "    return hidden_rgb, found_objects\n",
+    "\n",
+    "\n",
+    "# Find the objects\n",
+    "result_img, found_objects = find_objects(hidden_gray, hidden_rgb, templates)\n",
+    "\n",
+    "# Display the image with detected objects\n",
+    "fig, ax = plt.subplots(1,1, figsize=(20, 20),squeeze=False)\n",
+    "\n",
+    "display_image(result_img, axes=ax[0][0])\n",
+    "ax[0][0].set_title(\"Input\")\n",
+    "ax[0][0].set_xticks([])\n",
+    "ax[0][0].set_yticks([])\n",
+    "\n",
+    "plt.show()\n",
+    "fig, ax = plt.subplots(1,10, figsize=(20, 20),squeeze=False)\n",
+    "\n",
+    "for i, template in enumerate(templates):\n",
+    "    display_image(template, axes=ax[0][i])\n",
+    "    ax[0][i].set_title(\"Templates {:d}\".format(i+1))\n",
+    "    ax[0][i].set_xticks([])\n",
+    "    ax[0][i].set_yticks([])"
    ]
   },
   {
@@ -984,8 +1113,13 @@
     "#######################\n",
     "\n",
     "# YOUR CODE HERE TO LOAD YOUR TEMPLATES\n",
-    "templates = []\n",
-    "\n",
+    "# def preprocess_image(image):\n",
+    "#     # gray = cv.cvtColor(image, cv.COLOR_BGR2GRAY)\n",
+    "#     blurred = cv.GaussianBlur(image, (3, 3), 0)\n",
+    "#     edges = cv.Canny(blurred, 5, 40)\n",
+    "#     return edges\n",
+    "# edges_templates = [preprocess_image(t) for t in templates]\n",
+    "templates = \n",
     "for i, template in enumerate(templates):\n",
     "    display_image(template, axes=ax[0][i])\n",
     "    ax[0][i].set_title(\"Templates {:d}\".format(i+1))\n",
@@ -1002,7 +1136,36 @@
    },
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"
+    "## YOUR CODE HERE\n",
+    "\\\n",
+    "def preprocess_image(image):\n",
+    "    # gray = cv.cvtColor(image, cv.COLOR_BGR2GRAY)\n",
+    "    blurred = cv.GaussianBlur(image, (5, 5), 0)\n",
+    "    edges = cv.Canny(blurred, 50, 150)\n",
+    "    return edges\n",
+    "\n",
+    "hidden_edges = preprocess_image(hidden_gray)\n",
+    "\n",
+    "scaled_templates = [cv.resize(t, (int(t.shape[1] * 1.1), int(t.shape[0] * 1.1))) for t in templates]\n",
+    "\n",
+    "result_img, found_objects = find_objects(hidden_gray, hidden_rgb, scaled_templates)\n",
+    "\n",
+    "# Display the image with detected objects\n",
+    "fig, ax = plt.subplots(1,1, figsize=(20, 20),squeeze=False)\n",
+    "\n",
+    "display_image(result_img, axes=ax[0][0])\n",
+    "ax[0][0].set_title(\"Input\")\n",
+    "ax[0][0].set_xticks([])\n",
+    "ax[0][0].set_yticks([])\n",
+    "\n",
+    "plt.show()\n",
+    "fig, ax = plt.subplots(1,10, figsize=(20, 20),squeeze=False)\n",
+    "\n",
+    "for i, template in enumerate(templates):\n",
+    "    display_image(template, axes=ax[0][i])\n",
+    "    ax[0][i].set_title(\"Templates {:d}\".format(i+1))\n",
+    "    ax[0][i].set_xticks([])\n",
+    "    ax[0][i].set_yticks([])"
    ]
   },
   {
@@ -2428,9 +2591,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Exam",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
-   "name": "exam"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2442,7 +2605,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3196968d684371006099b3d55edeef8ed90365227a30deaef86e5d4aa8519be0"
+   }
   }
  },
  "nbformat": 4,
