--- a/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
+++ b/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
@@ -1243,7 +1243,7 @@
     "\n",
     "- What should be the size of the _training_features_ list? Why?\n",
     "\n",
-    "This list should have a length of 3634, since we have grouped all images together. There are 2416 positive images in the file `inria_train_pos.txt` and 1218 negative images in the file `inria_train_neg.txt`, so `2416`+`1218`=`3634`. Each of these sample has 16'800 dimensions as it is the feature vector of an image. "
+    "This list should have a length of 3634, since we have grouped all images together. There are 2416 positive images listed in the file `inria_train_pos.txt` and 1218 negative images listed in the file `inria_train_neg.txt`, so `2416`+`1218`=`3634`. Each of these sample has 16'800 dimensions as it is the feature vector of an image. "
    ]
   },
   {
@@ -1300,10 +1300,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Justify parameters\n",
+    "#### Justification of the parameters\n",
     "\n",
-    "Reflechir entre C = 1 et C = 0.01\n",
-    "Maybe C = 1 because default parameter and 10'000 iterations to let it converge"
+    "In this case we chose a `C = 1.0` which is the default parameter for LinearSVC for sklearn and we extended max_iter to `10'000` (the default value is `1'000`). This extension was made for the sake of the accuracy. Enabling more iterations leads to a longer computation time but also increases the precision."
    ]
   },
   {
@@ -1731,7 +1730,7 @@
     "                    new_im = cv2.resize(image, (int(dim[1]/2), int(dim[0]/2)))\n",
     "                    x = new_im.flatten()\n",
     "                    x_norm = (x-np.min(x))/(np.max(x)-np.min(x))\n",
-    "                    data.append(x_norm)\n",
+    "                    data.append(x)\n",
     "                    label.append(i)\n",
     "                    \n",
     "    data, label = np.array(data), np.array(label)    \n",
@@ -1848,7 +1847,7 @@
     "        \n",
     "print(\"The total number of components to retain 95% of the variance of the data is:\", m)\n",
     "eigenfaces = pca.components_[:m]    \n",
-    "\n",
+    "print(eigenfaces.shape)\n",
     "dim = cv.imread(train[1][0]).shape[:2]\n",
     "\n",
     "\n",
@@ -1901,13 +1900,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u, s, v = np.linalg.svd(X)\n",
+    "pc = v.copy()\n",
+    "for i in range(8):\n",
+    "    plt.subplot(2,4,i+1)\n",
+    "    plt.title(\"EigenFace #\"+str(i))\n",
+    "    plt.imshow(pc[i, :].reshape(int(dim[0]/2), int(dim[1]/2)), cmap='gray') ### Eigenfaces instead of pc I think\n",
+    "    plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**YOUR ANSWER**\n",
     "\n",
-    "Elcairage gauche droite  dessuss...\n",
-    "Same result between both methods"
+    "First, we notice that both methods using sklearn and computed from scratch leads to the same results. We need the `48` first components to retain `95% of the variance` present in the data. We can also read it on graph 2 that represents the cumulated contribution of the eigenvalues.\n",
+    "\n",
+    "On the displayed images, we can distinguish 8 faces with a different illumination on each picture. For instance `EigenFace #0` is illuminated from the right while `EigenFace #1` is illuminated from the left and so forth. This variation in the illumination helps to distinguish the different features of the faces. For example, on `EigenFace #0` we can barely see the eyebrows on the face while they are easily observable on `EigenFace #3`."
    ]
   },
   {
@@ -1952,7 +1968,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER**"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "On the plot `Trainset clusters`, we can observe that the different colour points are mixed and not clearly seperable. Even if they each colour tends to be concentrated within the same region, there are other colours that are grouped almost at the same place. That means that we cannot find a clean inter-subject seperation at that point."
    ]
   },
   {
@@ -2004,14 +2022,17 @@
     "    unique_lbl = None\n",
     "\n",
     "    # YOUR CODE HERE\n",
+    "    \n",
+    "    ### Try U = pca.component_[:m]\n",
     "    data_centered = data-data.mean(axis=0)\n",
-    "    U = trsfrm.transform(data).T\n",
-    "    print(U.shape, train_centered.shape)\n",
-    "    centroids = np.array(np.split(U@data_centered, 38, axis=0))\n",
+    "    trsfrm.transform(data) # U = \n",
+    "    U = trsfrm.components_[:m]\n",
+    "    centroids = np.array(np.split(U@data_centered.T, 38, axis=1)) # not .T and axis =0\n",
     "    print(centroids.shape)\n",
-    "    centroids = np.mean(centroids, axis=1)\n",
+    "    centroids = np.mean(centroids, axis=2) # axis = 2\n",
     "    \n",
     "    unique_lbl = np.unique(label)\n",
+    "    print(centroids.shape)\n",
     "    \n",
     "    return centroids, unique_lbl"
    ]
@@ -2040,10 +2061,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"The number of centroids is :\", train_centroids.shape[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We should have 38 centroids since this is the number of subjects."
+    "We should have `38 centroids` since this is the number of subjects. As we computed the mean of all the projections of the training samples for each subject, this leads to 38 centroids and this is in agreement with the result printed above."
    ]
   },
   {
@@ -2081,7 +2111,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics.pairwise import euclidean_distances\n",
     "\n",
     "def recognize(trsfrm, centroids, centroids_label, samples):\n",
     "    \"\"\"\n",
@@ -2098,7 +2127,8 @@
     "    \n",
     "    # YOUR CODE HERE\n",
     "    data_centered = samples-samples.mean(axis=0)\n",
-    "    U = trsfrm.transform(samples).T\n",
+    "    trsfrm.transform(samples).T # U = \n",
+    "    U = trsfrm.components_[:m]\n",
     "    #omega_n = np.array(np.split(U@train_centered, 38, axis=0))\n",
     "    \n",
     "    X = samples\n",
@@ -2106,11 +2136,11 @@
     "    mean = np.matmul(np.ones(X.shape[0]).reshape(X.shape[0],1),X.mean(0).reshape(1,X.shape[1]))\n",
     "    X = X - mean\n",
     "\n",
-    "    omegas = U@X\n",
+    "    omegas = U@X.T\n",
     "    pred = []\n",
     "    print(omegas.shape, X.shape)\n",
     "\n",
-    "    for om in omegas:\n",
+    "    for om in omegas.T: # no .T\n",
     "        dist = []\n",
     "        for c in centroids:\n",
     "            dist.append(np.linalg.norm(om-c))\n",
@@ -2177,8 +2207,6 @@
     "# YOUR CODE HERE\n",
     "test_img, test_label = load_images(test)\n",
     "test_centered = test_img-test_img.mean(axis=0)\n",
-    "pca = PCA()\n",
-    "pca.fit(test_centered)\n",
     "pca_test_pred = recognize(pca, train_centroids, train_centroid_label, test_img)\n",
     "n_err = np.count_nonzero(np.where(pca_test_pred != test_label))\n",
     "test_acc = 1.0 - n_err / test_label.size\n",
@@ -2190,7 +2218,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER**"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "We can observe that the recognition accuracy on the `testing set` is **lower** than on the `training one`, but remains a good performance. This is what we should expect as we try to recognize new images that may be different from the training ones that were used to compute the centroids."
    ]
   },
   {
@@ -2211,6 +2241,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(cm, \n",
+    "                          classes,\n",
+    "                          normalize=False,\n",
+    "                          title='Confusion matrix',\n",
+    "                          axes=None,\n",
+    "                          cmap=plt.cm.Blues):\n",
+    "    \"\"\"\n",
+    "    This function prints and plots the confusion matrix.\n",
+    "    Normalization can be applied by setting `normalize=True`.\n",
+    "    \n",
+    "    :param cm: Confusion matrix\n",
+    "    :param classes: Classes name\n",
+    "    :param normalize: Indicate if the confusion matrix need to be normalized\n",
+    "    :param title: Plot's title\n",
+    "    :param axes: Subplot on which to display the image\n",
+    "    :param cmap: Colormap to use\n",
+    "    \"\"\"\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "        print(\"Normalized confusion matrix\")\n",
+    "    else:\n",
+    "        print('Confusion matrix, without normalization')\n",
+    "    # Show cm\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "\n",
+    "    #fmt = '.2f' if normalize else 'd'\n",
+    "    #thresh = cm.max() / 2.\n",
+    "    #for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "    #    plt.text(j, i, format(cm[i, j], fmt),\n",
+    "    #             horizontalalignment=\"center\",\n",
+    "    #             color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "-erz-7w5pCsR"
    },
@@ -2221,7 +2299,7 @@
     "#########################\n",
     "\n",
     "cm = confusion_matrix(pca_test_pred, test_label)\n",
-    "pca_test_pred\n",
+    "classes = np.unique(train_label)\n",
     "\n",
     "# Plot confusion matrix\n",
     "plt.figure(figsize=(12, 7))\n",
@@ -2232,7 +2310,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER**"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "It can be seen that this matrix is **not perfectly symmetric** and is **not perfectly diagonal** even though it is close to being so. The values on each row should add up to one and so whenever we have an non-diagonal element not equal to zero, the diagonal element on the same row will be less than one. Those non-zero non-diagonal elements represent the location where a missclassification occured. The `x axis` indicates the label that was assigned to a picture and the `y axis` the true label of the picture.\n",
+    "\n",
+    "The diagonal elements represent the successful classifications as the predicted labels match the true ones.\n",
+    "\n",
+    "If the test prediction accuracy were to be 100% all the diagonal elements should be set to one 1 and the rest to 0 as we will see in section `2.3.3 Fisherface`."
    ]
   },
   {
@@ -2293,7 +2377,17 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "lda = LDA()\n",
+    "lda.fit(train_img, train_label)\n",
+    "fisherfaces = lda.coef_\n",
+    "\n",
+    "for i in range(8):\n",
+    "    plt.subplot(2,4,i+1)\n",
+    "    plt.title(\"EigenFace #\"+str(i))\n",
+    "    plt.imshow(fisherfaces[i, :].reshape(int(dim[0]/2), int(dim[1]/2)), cmap='gray') ### Eigenfaces instead of pc I think\n",
+    "    plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
@@ -2317,14 +2411,28 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "proj_train = lda.transform(train_img)\n",
+    "\n",
+    "# Visualize \n",
+    "# Colors for distinct individuals\n",
+    "colors = LabelEncoder().fit_transform(train_label.ravel())\n",
+    "\n",
+    "plt.figure(figsize=(12, 7))\n",
+    "plt.scatter(proj_train[:, 2], proj_train[:, 3], c=colors)\n",
+    "plt.xlabel('Axis 2')\n",
+    "plt.ylabel('Axis 1')\n",
+    "plt.title('Trainset clusters')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER**\n"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "In this case, the subspace is more sparsed in the sense that we can see clusters that are aggregated by colour.  About thirty clusters can be seen, so can deduce that each cluster corresponds to a subject. This result is better than what we had for PCA as we can find an inter-subject seperation more easily. "
    ]
   },
   {
@@ -2351,6 +2459,8 @@
     "\n",
     "######################\n",
     "# YOUR CODE HERE\n",
+    "train_acc = lda.score(train_img, train_label)\n",
+    "test_acc = lda.score(test_img, test_label)\n",
     "######################\n",
     "\n",
     "print(\"The recognition accuracy on the trainig set is {:.2f}\".format(train_acc))\n",
@@ -2386,7 +2496,8 @@
    "source": [
     "\n",
     "######################\n",
-    "# YOUR CODE HERE\n",
+    "cm = confusion_matrix(lda.predict(test_img), test_label)\n",
+    "classes = np.unique(train_label) # or np.arange(38)\n",
     "######################\n",
     "\n",
     "# Plot confusion matrix\n",
@@ -2398,7 +2509,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER**"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "In the case of LDA, the matrix is symmetric and seems to be a pure diagonal matrix. The diagonal elements are equal to one and the other components are 0. This behaviour is unlike the one of the confusion matrix for PCA. The latter was not exaclty symmetric and some non diagonal terms were set to values between 0.2, 0.4 and not all the diagonal terms were set to one.\n",
+    "\n",
+    "This difference between PCA and LDA is also observable in the training and testing accuracy which is 1.00 for LDA whil it is lower for PCA and explains this difference on the confusion matrix. There are no off-diagonal elements because the classification error is 0%."
    ]
   },
   {
@@ -2418,7 +2533,16 @@
     "id": "n6m6JVzmpCsX"
    },
    "source": [
-    "**YOUR ANSWER**"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "LDA seems to be the best method since it achieves an accuracy of 100% for both training and testing images. As we could observe with the projection of the data on the subspace of LDA and PCA, LDA achieve a much better seperability of the clusters and thus has a better performance.\n",
+    "\n",
+    "However, LDA may also have a drawbacks. \n",
+    "- While PCA is an unsupervised learning method, LDA takes the class lables into account. This means that this method cannot be used without labels\n",
+    "\n",
+    "- This method finds a trade off between two factors. It tries to find a subspace where the variation is large but also aims to maximize the inter-class separability by taking into account each sample's label. This \n",
+    "\n",
+    "PCA's drawback is its accuracy that is in general lower than LDA in the case where we have access to labels. However, the pro of this method is that it can be used without labels whil LDA not as it is unsupervised method."
    ]
   }
  ],
