--- a/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
+++ b/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
@@ -65,12 +65,12 @@
    "source": [
     "# !pip install scikit-learn imageio\n",
     "\n",
-    "import cv2 as cv\n",
+    "import cv2 as cv2\n",
     "import numpy as np\n",
     "import os\n",
     "import math\n",
     "import tarfile\n",
-    "from utils import *\n",
+    "#from utils import *\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -1463,7 +1463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Justification of the parameters\n",
+    "#### Justification of the chosen parameters \n",
     "\n",
     "In this case we chose a `C = 1.0` which is the default parameter for LinearSVC for sklearn and we extended max_iter to `10'000` (the default value is `1'000`). This extension was made for the sake of the accuracy. Enabling more iterations leads to a longer computation time but also increases the precision."
    ]
@@ -1541,6 +1541,13 @@
     "# Compute score\n",
     "print('Estimation Error: {:.3f}%'.format(err * 100.0))\n",
     "print('Success Rate: {:.3f}%'.format(err * 100.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add comments"
    ]
   },
   {
@@ -1860,7 +1867,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing as pre\n",
     "\n",
     "def load_images(subset):\n",
     "    \"\"\"\n",
@@ -1892,8 +1898,9 @@
     "                    dim = image.shape\n",
     "                    new_im = cv2.resize(image, (int(dim[1]/2), int(dim[0]/2)))\n",
     "                    x = new_im.flatten()\n",
-    "                    x_norm = (x-np.min(x))/(np.max(x)-np.min(x))\n",
-    "                    data.append(x)\n",
+    "                    #x_norm = (x-np.min(x))/(np.max(x)-np.min(x))\n",
+    "                    x_norm = x/255\n",
+    "                    data.append(x_norm)\n",
     "                    label.append(i)\n",
     "                    \n",
     "    data, label = np.array(data), np.array(label)    \n",
@@ -2635,7 +2642,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER**"
+    "**YOUR ANSWER**\n",
+    "\n",
+    "Using LDA we get 100% accuracy. This means that no error was made during the prediction for both training and testing set."
    ]
   },
   {
@@ -2715,9 +2724,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Exam",
    "language": "python",
-   "name": "python3"
+   "name": "exam"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2729,7 +2738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
